fixed cropping bug, messages page bug, and a whole lot of other minor breakdowns

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -123,6 +123,9 @@ background-color: #F0F0F0;
     margin-bottom:1em;
 
 }
+.message-container-hidden{
+    display:none;
+}
 .message-container-me{
     width:75%;
     float:right;
